--- a/src/Evolve.Tool/Evolve.Tool.csproj
+++ b/src/Evolve.Tool/Evolve.Tool.csproj
@@ -12,19 +12,19 @@
   <PropertyGroup>
     <PackageId>Evolve.Tool</PackageId>
     <Title>Database migration tool for .NET. Inspired by Flyway.</Title>
-    <Authors>Philippe Lécaillon</Authors>
+    <Authors>Philippe Lécaillon, Eric Rushing</Authors>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Copyright>Copyright © P.Lécaillon 2021</Copyright>
     <Description>Evolve is an easy migration tool that uses plain old sql scripts. Its purpose is to automate your database changes, and help keep those changes synchronized through all your environments and developpement teams.
 Every time you build your project, it will automatically ensure that your database is up-to-date, without having to do anything other than build. Install it and forget it !</Description>
     <RepositoryType>git</RepositoryType>
     <PackageProjectUrl>https://evolve-db.netlify.com</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/lecaillon/Evolve/master/images/logo128.png</PackageIconUrl>
-    <RepositoryUrl>https://github.com/lecaillon/Evolve.git</RepositoryUrl>
     <PackageTags>evolve flyway dotnet tool sql database migration mysql sqlserver cassandra mariadb sqlite postgresql cockroachdb</PackageTags>
-    <PackageReleaseNotes>## Features
-- Add .NET 9 support, drop .NET 7/8 support
-- Remove support for netstandard2.0</PackageReleaseNotes>
+    <PackageReleaseNotes>
+      ## Features
+      - Add .NET 9 support, drop .NET 7/8 support
+      - Remove support for netstandard2.0
+    </PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
