--- a/src/Evolve.Tool/Evolve.Tool.csproj
+++ b/src/Evolve.Tool/Evolve.Tool.csproj
@@ -17,7 +17,7 @@
 Every time you build your project, it will automatically ensure that your database is up-to-date, without having to do anything other than build. Install it and forget it !</Description>
     <RepositoryType>git</RepositoryType>
     <PackageProjectUrl>https://evolve-db.netlify.com</PackageProjectUrl>
-    <PackageIconUrl>https://raw.githubusercontent.com/lecaillon/Evolve/master/images/logo128.png</PackageIconUrl>
+    <PackageIcon>https://raw.githubusercontent.com/lecaillon/Evolve/master/images/logo128.png</PackageIcon>
     <PackageTags>evolve flyway dotnet tool sql database migration mysql sqlserver cassandra mariadb sqlite postgresql cockroachdb</PackageTags>
     <PackageReleaseNotes>
       ## Features
